# keyswirl

./: .gitignore  CHANGELOG.md  README.md  cabal.project  flake.nix  haskell-keyboard-fuckery.cabal  shell.nix  swoop.nix
.github/workflows/: generate-layout-previews.yaml
examples/: prelude.bkf  test.bkf
examples/errors/: IllegalAssumption.bkf  InvalidKeycode.bkf  NotCallable.bkf  VarNotInScope.bkf  WrongArgument.bkf  WrongType.bkf
examples/errors/computeLayer/: DuplicatePatternBinder.bkf  DuplicatePatternKeycode.bkf  IncorrectMemberType.bkf
examples/errors/layerTemplate/: DuplicateTemplateKeycode.bkf
examples/errors/modules/: CannotFindModule.bkf  helper.bkf
examples/errors/staticLayer/: IncorrectMemberType.bkf  RequiresTemplate.bkf  WrongTemplateLength.bkf
examples/hmm/: anotherThing.bkf  something.bkf
examples/hmm/something/: otherThing.bkf
keyboards/kanata/laptop/: README.md  lens.json
keyboards/qmk/: shell.nix
keyboards/qmk/ferris-sweep/: README.md  config.h  config.lens  keymap.c  lens.json  rules.mk
layout-lens/: .gitignore  README.md  default.nix  input.lens  package-lock.json  package.json  shell.nix  spago.yaml
layout-lens/scripts/: generate-layouts.sh
layout-lens/src/: Main.purs  Parser.purs  Prelude.purs  config.ts  index.ts  layout.ts  render.ts  svg.ts  types.ts  vec2.ts
layout-lens/src/Data/: CommonConfig.purs  Config.purs  Geometry.purs  RawConfig.purs  Svg.purs  Vec2.purs
layout-lens/src/Generate/: Svg.purs
layout-lens/src/layouts/: alpha_staggered_double_switch.ts  split_3x5_2.ts
layout-lens/vim/ftdetect/: lens.vim
layout-lens/vim/syntax/: lens.vim
src/: MyLib.hs  index.ts
src/HKF/: Ast.hs  Check.hs  Crawl.hs  Error.hs  IR.hs  Parser.hs
tests/: Test.hs
tests/examples/: prelude.hkf
tests/examples/errors/: InvalidKeycode.hkf  InvalidKeycode.out  NotCallable.out  VarNotInScope.out  WrongArgument.hkf  WrongArgument.out  WrongType.hkf  WrongType.out
tests/examples/errors/computeLayer/: DuplicatePatternBinder.out  DuplicatePatternKeycode.out  IncorrectMemberType.hkf  IncorrectMemberType.out
tests/examples/errors/layerTemplate/: DuplicateTemplateKeycode.out
tests/examples/errors/modules/: CannotFindModule.out  NoSuchExport.hkf  NoSuchExport.out
tests/examples/errors/modules/CircularImport/: ping.hkf  ping.out  pong.hkf  pong.out
tests/examples/errors/staticLayer/: IncorrectMemberType.out  RequiresTemplate.out  WrongTemplateLength.hkf  WrongTemplateLength.out
tests/examples/hmm/: anotherThing.hkf  something.hkf
