cabal-version:      2.4
name:               haskell-keyboard-fuckery
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Matei Adriel
maintainer:         rafaeladriel11@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    other-modules:
      HKF.Ast
      HKF.Parser
      HKF.Check

    mixins:  
      base hiding (Prelude),
      relude (Relude as Prelude),
      relude

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base ^>=4.14.3.0,
      relude ^>= 1.0.0.0,
      mtl, 
      text,
      megaparsec,
      validation

    hs-source-dirs:   src
    default-language: Haskell2010

executable haskell-keyboard-fuckery
    main-is:          Main.hs

    mixins:  
      base hiding (Prelude),
      relude (Relude as Prelude),
      relude

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        relude ^>= 1.0.0.0,
        haskell-keyboard-fuckery

    hs-source-dirs:   app
