cabal-version:      3.6
name:               haskell-keyboard-fuckery
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Matei Adriel
maintainer:         rafaeladriel11@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


library 
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    other-modules:
      HKF.Ast
      HKF.Parser
      HKF.Check
      HKF.Error
      HKF.IR
      HKF.Crawl

    mixins:  
      base hiding (Prelude),
      relude (Relude as Prelude),
      relude

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base ^>=4.14.3.0,
      relude ^>= 1.0.0.0,
      diagnose,
      mtl, 
      text,
      megaparsec,
      prettyprinter,
      prettyprinter-ansi-terminal,
      validation,
      text-metrics


    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: 
      BlockArguments,
      NamedFieldPuns,
      DeriveFunctor,
      DeriveTraversable,
      LambdaCase,
      OverloadedStrings,
      MultiParamTypeClasses,
      TypeSynonymInstances,
      FlexibleInstances,
      PartialTypeSignatures,
      TupleSections

executable haskell-keyboard-fuckery
    main-is:          Main.hs

    mixins:  
      base hiding (Prelude),
      relude (Relude as Prelude),
      relude

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        relude ^>= 1.0.0.0,
        haskell-keyboard-fuckery

    hs-source-dirs:   app

test-suite test 
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  mixins:  
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude
  default-extensions: 
      BlockArguments,
      OverloadedStrings
  build-depends:
    base ^>=4.14.3.0,
    relude ^>= 1.0.0.0,
    tasty ^>= 1.4.2.3,
    tasty-golden ^>= 2.3.5,
    tasty-hunit ^>= 0.10.0.3,
    filepath,
    diagnose,
    prettyprinter,
    haskell-keyboard-fuckery
 
  main-is: Test.hs
